--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diefenbach/tags",
+  "name": "picture-tags",
   "version": "0.0.1",
   "description": "tag UI for pictures",
   "main": ".",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TobiasStill/diefenbach_tags.git"
+    "url": "git+https://github.com/TobiasStill/picture_tags.git"
   },
   "author": "Tobias Still",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/TobiasStill/diefenbach_tags/issues"
+    "url": "https://github.com/TobiasStill/picture_tags/issues"
   },
-  "homepage": "https://github.com/TobiasStill/diefenbach_tags#readme",
+  "homepage": "https://github.com/TobiasStill/picture_tags#readme",
   "dependencies": {
     "vue": "^2.6.14",
     "vue-custom-scrollbar": "^1.4.1",
