--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -13,7 +13,8 @@
     "dyorg/slim-token-authentication": "dev-slim4",
     "ybelenko/openapi-data-mocker": "^1.0",
     "ybelenko/openapi-data-mocker-server-middleware": "^1.0",
-    "slim/psr7": "^1.1.0"
+    "slim/psr7": "^1.1.0",
+    "rakibtg/sleekdb": "^2.12"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
