--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -8,13 +8,12 @@
     }
   ],
   "require": {
-    "php": "^7.2|^8.0",
+    "php": "^7.2",
     "slim/slim": "^4.5.0",
     "dyorg/slim-token-authentication": "dev-slim4",
     "ybelenko/openapi-data-mocker": "^1.0",
     "ybelenko/openapi-data-mocker-server-middleware": "^1.0",
-    "slim/psr7": "^1.1.0",
-    "rakibtg/sleekdb": "^2.12"
+    "slim/psr7": "^1.1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
