--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "down": "cd ./docker && docker-compose down",
     "bundle": "gulp bundle:dist",
     "bundle-dev": "gulp bundle:dev",
-    "vendor": "gulp vendor:js && gulp vendor:css",
+    "vendor": "gulp vendor:js ",
     "openapi-generator": "openapi-generator-cli generate -g php-slim4 -i ./openAPI/PictureTag.yaml -o ./www/api"
   },
   "repository": {
