created vue project

--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "image": "cd ./docker && docker image build -t php8 .\n",
     "start": "cd ./docker && docker-compose up",
     "down": "cd ./docker && docker-compose down",
-    "bundle": "gulp bundle:dist",
-    "bundle-dev": "gulp bundle:dev",
-    "vendor": "gulp vendor:js ",
-    "openapi-generator": "openapi-generator-cli generate -g php-slim4 -i ./openAPI/PictureTag.yaml -o ./www/api"
+    "openapi-generator": "openapi-generator-cli generate -g php-slim4 -i ./openAPI/PictureTag.yaml -o api/api"
   },
   "repository": {
     "type": "git",
@@ -23,24 +20,8 @@
   },
   "homepage": "https://github.com/TobiasStill/picture_tags#readme",
   "dependencies": {
-    "vue": "^2.6.14",
-    "vue-custom-scrollbar": "^1.4.1",
-    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "@openapitools/openapi-generator-cli": "^2.4.10",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
-    "core-js": "^3.14.0",
-    "esm": "^3.2.25",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "regenerator-runtime": "^0.13.7",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "@openapitools/openapi-generator-cli": "^2.4.10"
   }
 }
