--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "image": "cd ./docker && docker image build -t php8 .\n",
     "start": "cd ./docker && docker-compose up",
     "down": "cd ./docker && docker-compose down",
-    "openapi-generator": "openapi-generator-cli generate -g php-slim4 -i ./openAPI/PictureTag.yaml -o api/api"
+    "openapi": "openapi-generator-cli generate -g php-slim4 -i ./openAPI/ImageTag.yaml -o www/api"
   },
   "repository": {
     "type": "git",
