--- a/docker/php-config/custom.ini
+++ b/docker/php-config/custom.ini
@@ -1,3 +1,5 @@
+memory_limit = 1024M
+
 ; Old Xdebug Docker configuration
 ; https://serversforhackers.com/c/getting-xdebug-working
 ;xdebug.remote_enable=1
