--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -8,12 +8,14 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^8",
     "slim/slim": "^4.5.0",
     "dyorg/slim-token-authentication": "dev-slim4",
     "ybelenko/openapi-data-mocker": "^1.0",
     "ybelenko/openapi-data-mocker-server-middleware": "^1.0",
-    "slim/psr7": "^1.1.0"
+    "slim/psr7": "^1.1.0",
+    "rakibtg/sleekdb": "^2.15",
+    "brendt/responsive-images": "^1.9"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
