--- a/vue-image-tag/package.json
+++ b/vue-image-tag/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@formkit/themes": "^0.16.4",
+    "@formkit/vue": "^0.16.4",
     "mande": "^2.0.6",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
